# riffle

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  LICENSE  Makefile  README.md  build.gradle.kts  gradle.properties  gradlew  settings.gradle.kts
.forgejo/workflows/: ci.yml  release.yml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
app/: build.gradle.kts  proguard-rules.pro
buildSrc/: build.gradle.kts
core/catalog/: build.gradle.kts
core/catalog-chitanka/: build.gradle.kts
core/catalog-gutenberg/: build.gradle.kts
core/catalog-komga/: build.gradle.kts
core/common/: build.gradle.kts
core/data/: build.gradle.kts
core/database/: build.gradle.kts
core/domain/: build.gradle.kts
core/logging/: build.gradle.kts
core/models/: build.gradle.kts
core/network/: build.gradle.kts
core/pdfium-text/: build.gradle.kts
core/pdfium-text/src/main/cpp/: CMakeLists.txt
core/pdfium-text/src/main/cpp/src/: pdfium_text_jni.cpp
docs/: fdroid-submission.md
docs/adr/: 0001-hybrid-cache-download-storage.md  0002-android-first-kmp-ready-architecture.md  0003-local-first-annotations.md  0004-distribution-channels.md  0005-unsupported-library-lazy-discovery.md  0006-immersive-mode-tap-via-readium-listener.md  0006-navigation-drawer-replaces-server-and-library-screens.md  0007-navigation-drawer-replaces-server-and-library-screens.md  0008-last-update-wins-progress-sync.md  0009-wake-lock-global-only-separate-store.md  0010-library-item-detail-screen-replaces-direct-tap-to-read.md  (+50 more)
gradle/: libs.versions.toml
(+1706 files in other folders)
